--- a/Frontend/src/main-section/shared/app-button/AppButton.css
+++ b/Frontend/src/main-section/shared/app-button/AppButton.css
@@ -7,11 +7,36 @@
   font-weight: bold;
   text-transform: uppercase;
   justify-content: center;
-  max-width: 100px;
+  max-width: fit-content;
+}
+
+.disabled-button {
+  display: flex;
+  color: gray;
+  padding: 15px;
+  border: 1px black solid;
+  border-radius: 5px;
+  background: #eee;
+  font-weight: bold;
+  text-transform: uppercase;
+  justify-content: center;
+  max-width: fit-content;
+}
+
+.disabled-button:hover {
+  cursor: not-allowed;
 }
 
 .app-button:hover {
   background: #2b2b2b;
   color: #eee;
   cursor: pointer;
+}
+
+.reset:hover {
+  background: maroon;
+}
+
+.darkgreen:hover {
+  background: darkgreen;
 }
