--- a/Frontend/src/main-section/upload-and-chat/UploadAndChat.css
+++ b/Frontend/src/main-section/upload-and-chat/UploadAndChat.css
@@ -24,11 +24,6 @@
   margin-bottom: 10px;
 }
 
-li {
-  margin-left: -50px;
-  list-style-type: none;
-}
-
 .file-uploaded {
   margin: 10px;
   display: flex;
@@ -36,12 +31,30 @@ li {
   gap: 20px;
 }
 
+.btn-group {
+  display: flex;
+  margin-top: 10px;
+  gap: 20px;
+}
 
 .document-chat-container {
   justify-content: center;
   align-items: center;
   text-align: center;
   margin-bottom: 10px;
+}
+
+textarea {
+  width: 50%;
+  height: 50px;
+  border-radius: 5px;
+  border: 2px black solid;
+  padding: 10px;
+  margin-bottom: 10px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: medium;
+  border: 2px black solid;
+  border-radius: 5px;
 }
 
 .document-chat {
@@ -53,4 +66,9 @@ li {
   height: 100%;
   border-radius: 5px;
   border: 2px black dashed;
+}
+
+.answer {
+  background-color: #eee;
+  width: 80%;
 }
